Java version updated to 21, adopted junit 5