@@ -1,15 +1,16 @@
-apply plugin: 'java'
-apply plugin: 'jacoco'
-
+plugins {
+    id 'java'
+    id 'jacoco'
+}
 repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 18
-targetCompatibility = 18
+tasks.withType(JavaCompile) {
+    options.release = 21
+}
 version = '2.0.0'
 group = 'xml.spreadsheet'
-jar.archiveName = "XMLSpreadsheetGenerator.jar"
 
 jar {
     manifest {
@@ -18,44 +19,30 @@ jar {
 }
 
 dependencies {
-	testImplementation group: 'junit', name: 'junit', version: '4.12'
+    // Apparently all these are necessary for running junit 5 in latest versions of gradle ¯\_(ツ)_/¯
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
     testImplementation 'jdom:jdom:1.1'
     testImplementation 'jaxen:jaxen:1.2.0'
 }
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
-test {
-    jvmArgs(['--enable-preview'])
-}
-
-// Jacoco configuration
-
+// tests and coverage configuration
 jacoco {
-    toolVersion = "0.8.8"
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        csv.enabled false
-    }
+    toolVersion = "0.8.11"
 }
 
 test {
+    useJUnitPlatform()
+    testLogging {
+        events "PASSED", "SKIPPED", "FAILED", "STANDARD_OUT"
+        showStandardStreams = true
+    }
     finalizedBy jacocoTestReport // report is always generated after tests run
 }
 
 javadoc {
     source = sourceSets.main.allJava
     classpath = configurations.implementation
-}
-
-test {
-    testLogging {
-        events "PASSED", "SKIPPED", "FAILED", "STANDARD_OUT"
-        showStandardStreams = true
-    }
 }
